# Claude-Code-From-Scratch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: context-compaction.md  streaming.md  subagents.md  system-design.md
src/cc/: __init__.py  agent.py  cli.py  prompts.py  swebench.py
src/cc/tools/: __init__.py  base.py  bash.py  edit.py  glob.py  grep.py  read.py  task.py  write.py
tests/: test_compaction.py  test_smoke.py  test_subagents.py
