[project]
name = "cc-from-scratch"
version = "0.1.0"
description = "Claude Code, rebuilt from first principles — a minimal agentic coding agent."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
]

[project.scripts]
cc = "cc.cli:main"
cc-swebench = "cc.swebench:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Optional: pulls in Hugging Face `datasets` for loading SWE-bench instances
# from the Hub. The runner also accepts local .json/.jsonl without this.
bench = [
    "datasets>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
